--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     </div>
 
     <!-- Search Box -->
-<div class="fixed bottom-2">
+<div class="fixed bottom-0">
     <form id="location-search" class="pl4">
-      <h1 class="flex-wrap items-baseline">
+      <h1 class="flex-wrap items-baseline ">
           <span class="mr3 mb2 f4">
             What's the weather like in:
           </span>
-          <input type="text" id="area" value="Tokyo" class="f5 flex-auto">
+          <input type="text" id="area" value="Tokyo" class="f5 flex-auto hi">
         </h1>
     </form>
   </div>
@@ -42,7 +42,7 @@
     <!-- <div class="absolute-fill center w-100 clouds clear thunderstorm drizzle rain snow atmosphere breezy windy"></div> -->
     <!-- <div class="flex center atmosphere breezy windy"></div> -->
 
-    <div class="mt7 pa4 bottom bg-white ba--black bw1 ma0">
+    <div class="mt6 pa4 bottom bg-white ba--black bw1 ma0">
       <div class="w-100 ">
         <p><span id="temp" class="center"></span></p>
         <p> <span id="location-name" class="f1"></span>, <span id="country" class="f1"></span></p>
