--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <div class="fixed bottom-0">
     <form id="location-search" class="pl4">
       <h1 class="flex-wrap items-baseline ">
-          <span class="mr3 mb2 f4">
-            What's the weather like in:
+          <span class="mr3 mb2 f4 search-text">
+            Where now?
           </span>
           <input type="text" id="area" value="Tokyo" class="f5 flex-auto hi">
         </h1>
@@ -37,13 +37,13 @@
 
     <!-- Content -->
 
-<div class="flex flex-column items-center center mt-70 w-100">
+<div class="flex flex-column items-center center ma0 w-100">
 
     <!-- <div class="absolute-fill center w-100 clouds clear thunderstorm drizzle rain snow atmosphere breezy windy"></div> -->
     <!-- <div class="flex center atmosphere breezy windy"></div> -->
 
-    <div class="mt6 pa4 bottom bg-white ba--black bw1 ma0">
-      <div class="w-100 ">
+    <div class="mt7 pa4 bottom bg-white ba--black bw1 ma0">
+      <div class="w-100%">
         <p><span id="temp" class="center"></span></p>
         <p> <span id="location-name" class="f1"></span>, <span id="country" class="f1"></span></p>
         <p>Max <span id="temp-max"></span> / Min <span id="temp-min"></span></p>
