--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="fixed bottom-0">
     <form id="location-search" class="pl4">
       <h1 class="flex-wrap items-baseline ">
-          <span class="mr3 mb2 f4 search-text">
+          <span class="mr3 mb2 f4-ns f5 search-text">
             Where now?
           </span>
           <input type="text" id="area" value="Tokyo" class="f5 flex-auto hi">
@@ -44,11 +44,11 @@
 
     <div class="mt7 pa4 bottom bg-white ba--black bw1 ma0">
       <div class="w-100%">
-        <p><span id="temp" class="center"></span></p>
-        <p> <span id="location-name" class="f1"></span>, <span id="country" class="f1"></span></p>
-        <p>Max <span id="temp-max"></span> / Min <span id="temp-min"></span></p>
-        <p><span class="center" id="condition"></span> / <span id="condition-description"></span></p>
-        <p>Wind: <span id="wind-speed"></span> mph</p>
+        <p><span id="temp" class="center f1"></span></p>
+        <p> <span id="location-name" class="f3 f1-ns"></span>, <span id="country" class="f3 f1-ns"></span></p>
+        <p>Max <span id="temp-max" class="f6 lh-solid f5-ns lh-copy-ns"></span> / Min <span id="temp-min" class="f6 lh-solid f5-ns lh-copy-ns"></span></p>
+        <p><span class="center f6 lh-solid f5-ns lh-copy-ns" id="condition"></span> / <span id="condition-description" class="f6 lh-solid f5-ns lh-copy-ns"></span></p>
+        <p>Wind: <span id="wind-speed" class="f6 lh-solid f5-ns lh-copy-ns"></span> mph</p>
       </div>
     </div>
 
