--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
 
 <div class="flex flex-column items-center center ma0 w-100">
 
-    <!-- <div class="absolute-fill center w-100 clouds clear thunderstorm drizzle rain snow atmosphere breezy windy"></div> -->
+    <div class="ma0 absolute-fill center w-100 clouds clear thunderstorm drizzle rain snow atmosphere breezy windy"></div>
     <!-- <div class="flex center atmosphere breezy windy"></div> -->
 
-    <div class="mt7 pa4 bottom bg-white ba--black bw1 ma0">
-      <div class="w-100%">
+    <div class="mt7 pa4 bottom bg-white">
+      <div class="w-100% mw-3">
         <p><span id="temp" class="center f1"></span></p>
-        <p> <span id="location-name" class="f3 f1-ns"></span>, <span id="country" class="f3 f1-ns"></span></p>
-        <p>Max <span id="temp-max" class="f6 lh-solid f5-ns lh-copy-ns"></span> / Min <span id="temp-min" class="f6 lh-solid f5-ns lh-copy-ns"></span></p>
-        <p><span class="center f6 lh-solid f5-ns lh-copy-ns" id="condition"></span> / <span id="condition-description" class="f6 lh-solid f5-ns lh-copy-ns"></span></p>
-        <p>Wind: <span id="wind-speed" class="f6 lh-solid f5-ns lh-copy-ns"></span> mph</p>
+        <p> <span id="location-name" class="f3"></span>, <span id="country" class="f3 "></span></p>
+        <p>Max <span id="temp-max" class="f6 lh-solid"></span> / Min <span id="temp-min" class="f6 lh-solid"></span></p>
+        <p><span class="center f6 lh-solid" id="condition"></span> / <span id="condition-description" class="f6 lh-solid"></span></p>
+        <p>Wind: <span id="wind-speed" class="f6 lh-solid "></span> mph</p>
       </div>
     </div>
 
