--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <div class="flex flex-column items-center center ma0 w-100">
 
-    <div class="ma0 absolute-fill center w-100 clouds clear thunderstorm drizzle rain snow atmosphere breezy windy"></div>
+    <!-- <div class="center w-100 clouds clear thunderstorm drizzle rain snow atmosphere breezy windy"></div> -->
     <!-- <div class="flex center atmosphere breezy windy"></div> -->
 
     <div class="mt7 pa4 bottom bg-white">
