--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- <div class="center w-100 clouds clear thunderstorm drizzle rain snow atmosphere breezy windy"></div> -->
     <!-- <div class="flex center atmosphere breezy windy"></div> -->
 
-    <div class="mt7 pa4 bottom bg-white">
+    <div class="mt7 pa4 bottom bg-white hello">
       <div class="w-100% mw-3">
         <p><span id="temp" class="center f1"></span></p>
         <p> <span id="location-name" class="f3"></span>, <span id="country" class="f3 "></span></p>
